js262/test/language/module-code/parse-err-decl-pos-export-class-expr-meth-gen-static.js


/*---
description: Expression cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

(class { static *method() { export default null; } });
